# GenEvolve3D

./: Contributions.md  GeneRevolver2D.ipynb  README.MD  dockerfile  install (1).nsi  install.nsi  installer.nsi  requirements.txt  setup.py
.github/workflows/: build.yml  hook_sklearn.py  install.nsi  installer.nsi  pyproject.toml  python-package.yml
.github/workflows/hooks/: hook_num.py  hook_sci.py  hook_sklearn.py
Demo_Tests/: Copy_of_GenEvolve3D.ipynb  GeneRevolver2D.ipynb
Src/: Evolve3D.py  GUI.py  GenEvolve3D.py  Main.py  install.nsi
YML/: CI_CD  CI_CD.yml  PyInstaller.yaml  build.yaml
src/: GUI.py  GenEvolve3D.py  evolution.py  evolution_gui.py  main.py  setup.py
