[build-system]
requires = ["setuptools>=58.0.0", "wheel", "numpy>=1.21.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
name = "GENrevolve3D"
version = "1.0.0"
description = "A 3D Evolution Simulation Application"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
url = "https://github.com/HermiTech-L3C/GENrevolve3D"
author = "HermiTech L3C"
author_email = "contact@hermitech-l3c.com"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["simulation", "evolution", "3D", "learning", "artificial intelligence"]
packages = find:
package_dir = {"": "src"}
include_package_data = True
install_requires = [
    "numpy>=1.21.2",
    "pandas>=1.2",
    "matplotlib>=3.4",
    "scikit-learn>=0.24",
    "wxpython>=4.1",
    "vtk>=9.0.3",
    "mayavi>=4.7",
    # Add other dependencies as needed
]
extras_require = {
    "dev": ["pytest>=6.0", "mypy>=0.910", "flake8>=3.9.0", "black>=21.5b0", "twine>=3.4.2"],
    "docs": ["sphinx>=4.0.0", "sphinx-rtd-theme>=0.5.2"],
    # Additional extra requirements can be added here
}
python_requires = ">=3.11,<4.0"
