[build-system]
requires = ["setuptools>=58.0.0", "wheel", "numpy>=1.21.2"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "GENrevolve3D"
version = "1.0.0"
description = "A 3D Evolution Simulation Application"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
url = "https://github.com/HermiTech-L3C/GENrevolve3D"
author = "HermiTech L3C <contact@hermitech-l3c.com>"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["simulation", "evolution", "3D", "learning", "artificial intelligence"]
packages = [
    { include = "src", from = "." }
]
include_package_data = true
install_requires = [
    "numpy>=1.21.2",
    "pygame>=2.0.0",
    "PyOpenGL>=3.1.0",
    "PyOpenGL_accelerate>=3.1.0",
]
extras = {
    "dev": ["pytest>=6.0", "mypy>=0.910", "flake8>=3.9.0", "black>=21.5b0", "twine>=3.4.2"],
    "docs": ["sphinx>=4.0.0", "sphinx-rtd-theme>=0.5.2"],
}
python = ">=3.11,<4.0"
