[tool.poetry]
name = "GENrevolve3D"
version = "1.0.0"
description = "A 3D Evolution Simulation Application"
authors = ["HermiTech L3C <contact@hermitech-l3c.com>"]
license = "MIT"
homepage = "https://github.com/HermiTech-L3C/GENrevolve3D"
repository = "https://github.com/HermiTech-L3C/GENrevolve3D"
documentation = "<URL to your documentation>"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["simulation", "evolution", "3D", "learning", "artificial intelligence"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.21.2"
pygame = "^2.0.0"
PyOpenGL = "^3.1.0"
PyOpenGL_accelerate = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
mypy = "^0.910"
flake8 = "^3.9.0"
black = "^21.5b0"
twine = "^3.4.2"
sphinx = "^4.0.0"
sphinx-rtd-theme = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
